--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
-    "express-jwt": "^6.0.0",
+    "express-jwt": "^5.3.3",
     "express-validator": "^5.3.0",
+    "formidable": "^1.2.2",
+    "fs": "0.0.1-security",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "mongoose": "^5.10.11",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.6",
